update swagger and add model language
