# backend/tongue-twister-back/api/routes/languageRoutes.js
@@ -1,0 +1,16 @@
+module.exports = function(app){
+    var language = require('../controllers/languageController');
+    var languages = require('../controllers/languagesController');
+
+    //Create a new language
+    app.route('/api/language')
+        .get(languages.read)
+        .post(language.create)
+    ;
+    //GET / PUT / DELETE by Id
+    app.route('/api/language/:languageId')
+        .get(language.read)
+        .put(language.update)
+        .delete(language.delete)
+    ;
+}
